--- a/a-la-francaise.html
+++ b/a-la-francaise.html
@@ -1,131 +1,198 @@
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <!DOCTYPE html>
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Restaurant -À la française - ohmyfood</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Restaurant - À la française - ohmyfood</title>
+    <link rel="stylesheet" href="public/css/styles.css">
     <script src="https://kit.fontawesome.com/bd29380e3d.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
-        <h1>ohmyfood</h1>
+        <div class="header-container">
+            <a href="index.html" class="fa-arrow-retour">
+            <i class="fas fa-arrow-left"></i>
+            </a>
+            <h1 class="shrikhand">ohmyfood</h1>
+        </div>
     </header>
     <main>
-        <section>
-            <img src="ressources\img\restaurants\toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française photo restaurant">
+        <section class="sec-thumbnail">
+            <img src="..\public\img\restaurants\toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française photo restaurant">
         </section>
-        <section>
-            <section>
-                <h2>Le délice des sens</h2>
-                <button>
+        <section class="sec-menu">
+            <section class="sec-menu__header">
+                <h2 class="shrikhand">La note enchantée</h2>
+                <div class="heart-container">
                     <i class="far fa-heart"></i>
-                </button>
+                    <i class="fas fa-heart"></i>
+                </div>
             </section>
-            <section>
+            <section class="sec-menu__main">
                 <section>
-                    <h3>ENTRÉES</h3>
-                    <a href="#">
-                        <div>
-                            <h4>Tartare de poulpe acidulé</h4>
-                            <p>Aux zestes d'orange</p>
+                    <h3 class="menu-titre">ENTRÉES</h3>
+                    <a href="#" class="menu-item">
+                        <div class="menu-item__content">
+                            <div class="menu-food">
+                                <h4>Tartare de poulpe acidulé</h4>
+                                <p>Aux zestes d'orange</p>
+                            </div>
+                            <div class="menu-prix">
+                                <p>25€</p>
+                            </div>
                         </div>
-                        <div>
-                            <p>25€</p>
-                        </div>
-                    </a>
-                    <a href="#">
-                        <div>
-                            <h4>Velouté de légumes d'antan</h4>
-                            <p>Carotte, panais, topinambour</p>
-                        </div>
-                        <div>
-                            <p>35€</p>
+                        <div class="menu-item__check">
+                            <i class="fas fa-check-circle"></i>
                         </div>
                     </a>
-                    <a href="#">
-                        <div>
-                            <h4>Soupe à l'oignon</h4>
-                            <p>Revisitée</p>
+                    <a href="#" class="menu-item">
+                        <div class="menu-item__content">
+                            <div class="menu-food">
+                                <h4>Soupe à l'oignon</h4>
+                                <p>Revisitée</p>
+                            </div>
+                            <div class="menu-prix">
+                                <p>35€</p>
+                            </div>
                         </div>
-                        <div>
-                            <p>20€</p>
+                        <div class="menu-item__check">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
+                    </a>
+                    <a href="#" class="menu-item">
+                        <div class="menu-item__content">
+                            <div class="menu-food">
+                                <h4>Coquilles Saint-Jacques</h4>
+                                <p>Accompagnées d'une purée de panais</p>
+                            </div>
+                            <div class="menu-prix">
+                                <p>20€</p>
+                            </div>
+                        </div>
+                        <div class="menu-item__check">
+                            <i class="fas fa-check-circle"></i>
                         </div>
                     </a>
                 </section>
                 <section>
-                    <h3>PLATS</h3>
-                    <a href="#">
-                        <div>
-                            <h4>Coquilles Saint-Jacques</h4>
-                            <p>Accompagnées d'une purée de panais</p>
+                    <h3 class="menu-titre">PLATS</h3>
+                    <a href="#" class="menu-item">
+                        <div class="menu-item__content">
+                            <div class="menu-food">
+                                <h4>Magret de canard</h4>
+                                <p>Et parmentier de pommes de terre</p>
+                            </div>
+                            <div class="menu-prix">
+                                <p>40€</p>
+                            </div>
                         </div>
-                        <div>
-                            <p>40€</p>
-                        </div>
-                    </a>
-                    <a href="#">
-                        <div>
-                            <h4>Magret de canard</h4>
-                            <p>Et parmentier de pommes de terre</p>
-                        </div>
-                        <div>
-                            <p>35€</p>
+                        <div class="menu-item__check">
+                            <i class="fas fa-check-circle"></i>
                         </div>
                     </a>
-                    <a href="#">
-                        <div>
-                            <h4>Pigeonneau d’Ille-et-Vilaine</h4>
-                            <p>Sur son lit de gnocchis aux légumes</p>
+                    <a href="#" class="menu-item">
+                        <div class="menu-item__content">
+                            <div class="menu-food">
+                                <h4>Pigeonneau d’Ille-et-Vilaine</h4>
+                                <p>Sur son lit de gnocchis aux légumes</p>
+                            </div>
+                            <div class="menu-prix">
+                                <p>35€</p>
+                            </div>
                         </div>
-                        <div>
-                            <p>44€</p>
+                        <div class="menu-item__check">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
+                    </a>
+                    <a href="#" class="menu-item">
+                        <div class="menu-item__content">
+                            <div class="menu-food">
+                                <h4>Mijoté de queue de boeuf</h4>
+                                 <p>Et riz sauvage aux zestes de citron</p>
+                            </div>
+                            <div class="menu-prix">
+                                <p>44€</p>
+                            </div>
+                        </div>
+                        <div class="menu-item__check">
+                            <i class="fas fa-check-circle"></i>
                         </div>
                     </a>
                 </section>
                 <section>
-                    <h3>DESSERTS</h3>
-                    <a href="#">
-                        <div>
-                            <h4>Pétales de violettes glacés</h4>
-                            <p>Et purée de noisettes</p>
+                    <h3 class="menu-titre">DESSERTS</h3>
+                    <a href="#" class="menu-item">
+                        <div class="menu-item__content">
+                            <div class="menu-food">
+                                <h4>Pétales de violettes glacés</h4>
+                                <p>Et purée de noisettes</p>
+                            </div>
+                            <div class="menu-prix">
+                                <p>18€</p>
+                            </div>
                         </div>
-                        <div>
-                            <p>18€</p>
-                        </div>
-                    </a>
-                    <a href="#">
-                        <div>
-                            <h4>Fondant au chocolat</h4>
-                            <p>Revisité</p>
-                        </div>
-                        <div>
-                            <p>22€</p>
+                        <div class="menu-item__check">
+                            <i class="fas fa-check-circle"></i>
                         </div>
                     </a>
-                    <a href="#">
-                        <div>
-                            <h4>Millefeuille croustillant</h4>
-                            <p>Myrtilles et pâte d’amande</p>
+                    <a href="#" class="menu-item">
+                        <div class="menu-item__content">
+                            <div class="menu-food">
+                                <h4>Fondant au chocolat</h4>
+                                <p>Revisité</p>
+                            </div>
+                            <div class="menu-prix">
+                                <p>22€</p>
+                            </div>
                         </div>
-                        <div>
-                            <p>23€</p>
+                        <div class="menu-item__check">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
+                    </a>
+                    <a href="#" class="menu-item">
+                        <div class="menu-item__content">
+                            <div class="menu-food">
+                                <h4>Millefeuille croustillant</h4>
+                                <p>Myrtilles et pâte d’amande</p>
+                            </div>
+                            <div class="menu-prix">
+                                <p>23€</p>
+                            </div>
+                        </div>
+                        <div class="menu-item__check">
+                            <i class="fas fa-check-circle"></i>
                         </div>
                     </a>
                 </section>
             </section>
-            <section>
-                <button>
-                    Commander
-                </button>
+            <section class="sec-menu__footer">
+                <button class="purple-button">Commander</button>
             </section>
         </section>
     </main>
     <footer>
-        <ul>
-            <h4>ohmyfood</h4>
-            <li>Proposer un restaurant</li>
-            <li>Devenir partenaire</li>
+        <ul class="footer-list">
+            <h4 class="shrikhand">ohmyfood</h4>
+            <li><i class="fas fa-utensils"></i>Proposer un restaurant</li>
+            <li><i class="fas fa-hands-helping"></i>Devenir partenaire</li>
             <li>Mentions légales</li>
             <li>Concact</li>
         </ul>
