--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Accueil - ohmyfood</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="public/css/styles.css">
     <script src="https://kit.fontawesome.com/bd29380e3d.js" crossorigin="anonymous"></script>
 
 </head>
@@ -21,10 +21,10 @@
                 </div>
             </section>
             <section class="sec-explore">
-                <div class="sec-explore__div">
+                <div class="sec-explore__div ">
                     <h2>Réservez le menu qui vous convient</h2>
                     <p>Découvrez des restaurants d'exeption, sélectionnés par nos soins.</p>
-                    <button>Explorez nos restaurant</button>
+                    <button class="purple-button">Explorez nos restaurant</button>
                 </div>
             </section>
         </section>
@@ -43,7 +43,7 @@
 
                 <a href="la-palette-du-gout.html" class="link-resto">
                     <p class="link-resto__new">Nouveau</p>
-                    <img src="ressources\img\restaurants\jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût photo">
+                    <img src="..\public\img\restaurants\jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût photo">
                     <div class="link-resto__description">
                         <h3>La palette du goût</h3>
                         <p>Ménilmontant</p>
@@ -56,7 +56,7 @@
                 </a>
                 <a href="la-note-enchantee.html" class="link-resto">
                     <p class="link-resto__new">Nouveau</p>
-                    <img src="ressources\img\restaurants\stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée photo">
+                    <img src="..\public\img\restaurants\stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée photo">
                     <div class="link-resto__description">
                         <h3>La note enchantée</h3>
                         <p>Charonne</p>
@@ -67,7 +67,7 @@
                     </div>
                 </a>
                 <a href="a-la-francaise.html" class="link-resto">
-                    <img src="ressources\img\restaurants\toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la françaises">
+                    <img src="..\public\img\restaurants\toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la françaises">
                     <div class="link-resto__description">
                         <h3>À la française</h3>
                         <p>Cité Rouge</p>
@@ -78,7 +78,7 @@
                     </div>
                 </a>
                 <a href="le-delice-des-sens.html" class="link-resto">
-                    <img src="ressources\img\restaurants\louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens photo">
+                    <img src="..\public\img\restaurants\louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens photo">
                     <div class="link-resto__description">
                         <h3>Le délice des sens</h3>
                         <p>Folie-Mélicourt</p>
