--- a/la-note-enchantee.html
+++ b/la-note-enchantee.html
@@ -3,138 +3,192 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Restaurant - La note enchantée - ohmyfood</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Restaurant - La palette du goût - ohmyfood</title>
+    <link rel="stylesheet" href="public/css/styles.css">
     <script src="https://kit.fontawesome.com/bd29380e3d.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
-        <h1>ohmyfood</h1>
+        <div class="header-container">
+            <a href="index.html" class="fa-arrow-retour">
+            <i class="fas fa-arrow-left"></i>
+            </a>
+            <h1 class="shrikhand">ohmyfood</h1>
+        </div>
     </header>
     <main>
-        <section>
-            <img src="ressources\img\restaurants\stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée photo restaurant">
+        <section class="sec-thumbnail">
+            <img src="..\public\img\restaurants\stil-u2Lp8tXIcjw-unsplash.jpg" class="thumbnail" alt="La note enchantee photo restaurant">
         </section>
-        <section>
-            <section>
-                <h2> La note enchantée</h2>
-                <button>
+        <section class="sec-menu">
+            <section class="sec-menu__header">
+                <h2 class="shrikhand">La note enchantée</h2>
+                <div class="heart-container">
                     <i class="far fa-heart"></i>
-                </button>
+                    <i class="fas fa-heart"></i>
+                </div>
             </section>
-            <section>
+            <section class="sec-menu__main">
                 <section>
-                    <h3>ENTRÉES</h3>
-                    <a href="#">
-                        <div>
-                            <h4>Ravioles de foie gras</h4>
-                            <p>Accompagnés de leur crème à la truffe</p>
+                    <h3 class="menu-titre">ENTRÉES</h3>
+                    <a href="#" class="menu-item">
+                        <div class="menu-item__content">
+                            <div class="menu-food">
+                                <h4>Ravioles de foie gras</h4>
+                                <p>Accompagnés de leur crème à la truffe</p>
+                            </div>
+                            <div class="menu-prix">
+                                <p>25€</p>
+                            </div>
                         </div>
-                        <div>
-                            <p>25€</p>
-                        </div>
-                    </a>
-                    <a href="#">
-                        <div>
-                            <h4>Caviar osciètre</h4>
-                            <p>Sur blini à la farine de blé noir</p>
-                        </div>
-                        <div>
-                            <p>35€</p>
+                        <div class="menu-item__check">
+                            <i class="fas fa-check-circle"></i>
                         </div>
                     </a>
-                    <a href="#">
-                        <div>
-                            <h4>Homard et espuma de potiron</h4>
-                            <p>Mariné aux zestes d'orange</p>
+                    <a href="#" class="menu-item">
+                        <div class="menu-item__content">
+                            <div class="menu-food">
+                                <h4>Caviar osciètre</h4>
+                                <p>Sur blini à la farine de blé noir</p>
+                            </div>
+                            <div class="menu-prix">
+                                <p>35€</p>
+                            </div>
                         </div>
-                        <div>
-                            <p>20€</p>
+                        <div class="menu-item__check">
+                            <i class="fas fa-check-circle"></i>
                         </div>
                     </a>
-                    <a href="#">
-                        <div>
-                            <h4>Foie gras de canard cuit entier</h4>
-                            <p>Confiture de figue et pain toasté</p>
+                    <a href="#" class="menu-item">
+                        <div class="menu-item__content">
+                            <div class="menu-food">
+                                <h4>Homard et espuma de potiron</h4>
+                                <p>Mariné aux zestes d'orange</p>
+                            </div>
+                            <div class="menu-prix">
+                                <p>20€</p>
+                            </div>
                         </div>
-                        <div>
-                            <p>35€</p>
+                        <div class="menu-item__check">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
+                    </a>
+                    <a href="#" class="menu-item">
+                        <div class="menu-item__content">
+                            <div class="menu-food">
+                                <h4>Foie gras de canard cuit entier</h4>
+                                <p>Confiture de figue et pain toasté</p>
+                            </div>
+                            <div class="menu-prix">
+                                <p>35€</p>
+                            </div>
+                        </div>
+                        <div class="menu-item__check">
+                            <i class="fas fa-check-circle"></i>
                         </div>
                     </a>
                 </section>
                 <section>
-                    <h3>PLATS</h3>
-                    <a href="#">
-                        <div>
-                            <h4>Noix de coquilles Saint-Jacques</h4>
-                            <p>Sur lit de purée de céleri-rave</p>
+                    <h3 class="menu-titre">PLATS</h3>
+                    <a href="#" class="menu-item">
+                        <div class="menu-item__content">
+                            <div class="menu-food">
+                                <h4>Noix de coquilles Saint-Jacques</h4>
+                                <p>Sur lit de purée de céleri-rave</p>
+                            </div>
+                            <div class="menu-prix">
+                                <p>40€</p>
+                            </div>
                         </div>
-                        <div>
-                            <p>40€</p>
-                        </div>
-                    </a>
-                    <a href="#">
-                        <div>
-                            <h4>Langoustine poêlée</h4>
-                            <p>Purée de patate douce</p>
-                        </div>
-                        <div>
-                            <p>35€</p>
+                        <div class="menu-item__check">
+                            <i class="fas fa-check-circle"></i>
                         </div>
                     </a>
-                    <a href="#">
-                        <div>
-                            <h4>Mijoté de queue de boeuf</h4>
-                            <p>Et riz sauvage aux zestes de citron</p>
+                    <a href="#" class="menu-item">
+                        <div class="menu-item__content">
+                            <div class="menu-food">
+                                <h4>Langoustine poêlée</h4>
+                                <p>Purée de patate douce</p>
+                            </div>
+                            <div class="menu-prix">
+                                <p>35€</p>
+                            </div>
                         </div>
-                        <div>
-                            <p>44€</p>
+                        <div class="menu-item__check">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
+                    </a>
+                    <a href="#" class="menu-item">
+                        <div class="menu-item__content">
+                            <div class="menu-food">
+                                <h4>Mijoté de queue de boeuf</h4>
+                                 <p>Et riz sauvage aux zestes de citron</p>
+                            </div>
+                            <div class="menu-prix">
+                                <p>44€</p>
+                            </div>
+                        </div>
+                        <div class="menu-item__check">
+                            <i class="fas fa-check-circle"></i>
                         </div>
                     </a>
                 </section>
                 <section>
-                    <h3>DESSERTS</h3>
-                    <a href="#">
-                        <div>
-                            <h4>Macaron noisette et chocolat</h4>
-                            <p>Glace au caramel brun et sel de Guérande</p>
+                    <h3 class="menu-titre">DESSERTS</h3>
+                    <a href="#" class="menu-item">
+                        <div class="menu-item__content">
+                            <div class="menu-food">
+                                <h4>Macaron noisette et chocolat</h4>
+                                <p>Glace au caramel brun et sel de Guérande</p>
+                            </div>
+                            <div class="menu-prix">
+                                <p>18€</p>
+                            </div>
                         </div>
-                        <div>
-                            <p>18€</p>
-                        </div>
-                    </a>
-                    <a href="#">
-                        <div>
-                            <h4>Baba au rhum revisité</h4>
-                            <p>Avec son coulis de citron</p>
-                        </div>
-                        <div>
-                            <p>22€</p>
+                        <div class="menu-item__check">
+                            <i class="fas fa-check-circle"></i>
                         </div>
                     </a>
-                    <a href="#">
-                        <div>
-                            <h4>Tarte au citron meringuée</h4>
-                            <p>Déstructurée</p>
+                    <a href="#" class="menu-item">
+                        <div class="menu-item__content">
+                            <div class="menu-food">
+                                <h4>Baba au rhum revisité</h4>
+                                <p>Avec son coulis de citron</p>
+                            </div>
+                            <div class="menu-prix">
+                                <p>22€</p>
+                            </div>
                         </div>
-                        <div>
-                            <p>23€</p>
+                        <div class="menu-item__check">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
+                    </a>
+                    <a href="#" class="menu-item">
+                        <div class="menu-item__content">
+                            <div class="menu-food">
+                                <h4>Tarte au citron meringuée</h4>
+                                <p>Déstructurée</p>
+                            </div>
+                            <div class="menu-prix">
+                                <p>23€</p>
+                            </div>
+                        </div>
+                        <div class="menu-item__check">
+                            <i class="fas fa-check-circle"></i>
                         </div>
                     </a>
                 </section>
             </section>
-            <section>
-                <button>
-                    Commander
-                </button>
+            <section class="sec-menu__footer">
+                <button class="purple-button">Commander</button>
             </section>
         </section>
     </main>
     <footer>
-        <ul>
-            <h4>ohmyfood</h4>
-            <li>Proposer un restaurant</li>
-            <li>Devenir partenaire</li>
+        <ul class="footer-list">
+            <h4 class="shrikhand">ohmyfood</h4>
+            <li><i class="fas fa-utensils"></i>Proposer un restaurant</li>
+            <li><i class="fas fa-hands-helping"></i>Devenir partenaire</li>
             <li>Mentions légales</li>
             <li>Concact</li>
         </ul>
