--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -4,124 +4,169 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Restaurant - La palette du goût - ohmyfood</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="public/css/styles.css">
     <script src="https://kit.fontawesome.com/bd29380e3d.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
         <div class="header-container">
+            <a href="index.html" class="fa-arrow-retour">
             <i class="fas fa-arrow-left"></i>
+            </a>
             <h1 class="shrikhand">ohmyfood</h1>
         </div>
     </header>
     <main>
         <section class="sec-thumbnail">
-            <img src="ressources\img\restaurants\jay-wennington-N_Y88TWmGwA-unsplash.jpg" class="thumbnail" alt="La palette du goût photo restaurant">
+            <img src="..\public\img\restaurants\jay-wennington-N_Y88TWmGwA-unsplash.jpg" class="thumbnail" alt="La palette du goût photo restaurant">
         </section>
         <section class="sec-menu">
             <section class="sec-menu__header">
                 <h2 class="shrikhand">La palette du goût</h2>
-                <div>
+                <div class="heart-container">
                     <i class="far fa-heart"></i>
                     <i class="fas fa-heart"></i>
                 </div>
             </section>
             <section class="sec-menu__main">
                 <section>
-                    <h3>ENTRÉES</h3>
-                    <a href="#">
-                        <div>
-                            <h4>Fricassée d'escargot</h4>
-                            <p>Au piment d'Espelette </p>
+                    <h3 class="menu-titre">ENTRÉES</h3>
+                    <a href="#" class="menu-item">
+                        <div class="menu-item__content">
+                            <div class="menu-food">
+                                <h4>Fricassée d'escargot</h4>
+                                <p>Au piment d'Espelette </p>
+                            </div>
+                            <div class="menu-prix">
+                                <p>25€</p>
+                            </div>
                         </div>
-                        <div>
-                            <p>25€</p>
-                        </div>
-                    </a>
-                    <a href="#">
-                        <div>
-                            <h4>Foie gras de canard mi-cuit</h4>
-                            <p>Et ses copeaux de truffe noire</p>
-                        </div>
-                        <div>
-                            <p>35€</p>
+                        <div class="menu-item__check">
+                            <i class="fas fa-check-circle"></i>
                         </div>
                     </a>
-                    <a href="#">
-                        <div>
-                            <h4>Oeuf au plat</h4>
-                            <p>Assaisonné à la truffe sur lit de caviar</p>
+                    <a href="#" class="menu-item">
+                        <div class="menu-item__content">
+                            <div class="menu-food">
+                                <h4>Foie gras de canard mi-cuit</h4>
+                                <p>Et ses copeaux de truffe noire</p>
+                            </div>
+                            <div class="menu-prix">
+                                <p>35€</p>
+                            </div>
                         </div>
-                        <div>
-                            <p>20€</p>
-                        </div>
-                    </a>
-                </section>
-                <section>
-                    <h3>PLATS</h3>
-                    <a href="#">
-                        <div>
-                            <h4>Filet de boeuf aux herbes</h4>
-                            <p>Accompagné de sa ribambelle de légumes</p>
-                        </div>
-                        <div>
-                            <p>40€</p>
+                        <div class="menu-item__check">
+                            <i class="fas fa-check-circle"></i>
                         </div>
                     </a>
-                    <a href="#">
-                        <div>
-                            <h4>Parmentier de queue de boeuf</h4>
-                            <p>À la truffe noire sur sa purée de panais</p>
+                    <a href="#" class="menu-item">
+                        <div class="menu-item__content">
+                            <div class="menu-food">
+                                <h4>Oeuf au plat</h4>
+                                <p>Assaisonné à la truffe sur lit de caviar</p>
+                            </div>
+                            <div class="menu-prix">
+                                <p>20€</p>
+                            </div>
                         </div>
-                        <div>
-                            <p>35€</p>
-                        </div>
-                    </a>
-                    <a href="#">
-                        <div>
-                            <h4>Filet de turbot</h4>
-                            <p>Aux agrumes</p>
-                        </div>
-                        <div>
-                            <p>44€</p>
+                        <div class="menu-item__check">
+                            <i class="fas fa-check-circle"></i>
                         </div>
                     </a>
                 </section>
                 <section>
-                    <h3>DESSERTS</h3>
-                    <a href="#">
-                        <div>
-                            <h4>Paris-Brest</h4>
-                            <p>Revisité</p>
+                    <h3 class="menu-titre">PLATS</h3>
+                    <a href="#" class="menu-item">
+                        <div class="menu-item__content">
+                            <div class="menu-food">
+                                <h4>Filet de boeuf aux herbes</h4>
+                                <p>Accompagné de sa ribambelle de légumes</p>
+                            </div>
+                            <div class="menu-prix">
+                                <p>40€</p>
+                            </div>
                         </div>
-                        <div>
-                            <p>18€</p>
-                        </div>
-                    </a>
-                    <a href="#">
-                        <div>
-                            <h4>Macaron au chocolat d'exception</h4>
-                            <p>Et glace à la vanille de Madagascar</p>
-                        </div>
-                        <div>
-                            <p>22€</p>
+                        <div class="menu-item__check">
+                            <i class="fas fa-check-circle"></i>
                         </div>
                     </a>
-                    <a href="#">
-                        <div>
-                            <h4>Mousse au chocolat</h4>
-                            <p>Au piment d'Espelette et à la truffe noire</p>
+                    <a href="#" class="menu-item">
+                        <div class="menu-item__content">
+                            <div class="menu-food">
+                                <h4>Parmentier de queue de boeuf</h4>
+                                <p>À la truffe noire sur sa purée de panais</p>
+                            </div>
+                            <div class="menu-prix">
+                                <p>35€</p>
+                            </div>
                         </div>
-                        <div>
-                            <p>23€</p>
+                        <div class="menu-item__check">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
+                    </a>
+                    <a href="#" class="menu-item">
+                        <div class="menu-item__content">
+                            <div class="menu-food">
+                                <h4>Filet de turbot</h4>
+                                <p>Aux agrumes</p>
+                            </div>
+                            <div class="menu-prix">
+                                <p>44€</p>
+                            </div>
+                        </div>
+                        <div class="menu-item__check">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
+                    </a>
+                </section>
+                <section>
+                    <h3 class="menu-titre">DESSERTS</h3>
+                    <a href="#" class="menu-item">
+                        <div class="menu-item__content">
+                            <div class="menu-food">
+                                <h4>Paris-Brest</h4>
+                                <p>Revisité</p>
+                            </div>
+                            <div class="menu-prix">
+                                <p>18€</p>
+                            </div>
+                        </div>
+                        <div class="menu-item__check">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
+                    </a>
+                    <a href="#" class="menu-item">
+                        <div class="menu-item__content">
+                            <div class="menu-food">
+                                <h4>Macaron au chocolat d'exception</h4>
+                                <p>Et glace à la vanille de Madagascar</p>
+                            </div>
+                            <div class="menu-prix">
+                                <p>22€</p>
+                            </div>
+                        </div>
+                        <div class="menu-item__check">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
+                    </a>
+                    <a href="#" class="menu-item">
+                        <div class="menu-item__content">
+                            <div class="menu-food">
+                                <h4>Mousse au chocolat</h4>
+                                <p>Au piment d'Espelette et à la truffe noire</p>
+                            </div>
+                            <div class="menu-prix">
+                                <p>23€</p>
+                            </div>
+                        </div>
+                        <div class="menu-item__check">
+                            <i class="fas fa-check-circle"></i>
                         </div>
                     </a>
                 </section>
             </section>
             <section class="sec-menu__footer">
-                <button>
-                    Commander
-                </button>
+                <button class="purple-button">Commander</button>
             </section>
         </section>
     </main>
